--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@writetome51/array-get-all-before-after-index",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Returns all array items after particular index or all array items before particular index",
-  "main": "",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,7 @@
   "homepage": "https://github.com/writetome51/array-get-all-before-after-index#readme",
   "devDependencies": {},
   "dependencies": {
-    "@writetome51/array-get-head-tail": "~1.0.3",
-    "@writetome51/array-and-index-validation": "~1.0.2"
+    "@writetome51/array-get-head-tail": "~1.0.5",
+    "@writetome51/array-and-index-validation": "~1.0.6"
   }
 }
